--- a/src/app/ui/components/header/header.component.html
+++ b/src/app/ui/components/header/header.component.html
@@ -2,6 +2,7 @@
     <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
         <div>
             <button mat-button>Logo App</button>
+            <button mat-button><mat-icon (click)="toggleSidebar()">reorder</mat-icon></button>
         </div>
         <div>
             <button mat-icon-button class="button">Home</button>
