--- a/src/app/ui/components/side-bar/side-bar.component.html
+++ b/src/app/ui/components/side-bar/side-bar.component.html
@@ -1,4 +1,8 @@
 <mat-nav-list>
     <a mat-list-item  routerLink="/items">
-        <mat-icon >add</mat-icon> <span >items</span> </a>
+        <mat-icon >add</mat-icon> <span >items</span> 
+    </a>
+    <a mat-list-item  routerLink="/items">
+        <mat-icon >more_vert</mat-icon> <span >forms</span> 
+    </a>
  </mat-nav-list>
