--- a/src/app/ui/layout/layout.component.html
+++ b/src/app/ui/layout/layout.component.html
@@ -1,7 +1,7 @@
 <app-header (sidebarToggeled)="sidebarOpened = !sidebarOpened"></app-header>
 
 <mat-drawer-container>
-    <mat-drawer mode="side" [opened]="sidebarOpened" [class.big]="sidebarOpened" [class.small]="!sidebarOpened">
+    <mat-drawer mode="side" [opened]="sidebarOpened">
         <app-side-bar [mediaSM]="mediaSM"></app-side-bar>
     </mat-drawer>
     <mat-drawer-content>
