--- a/src/app/ui/components/header/header.component.scss
+++ b/src/app/ui/components/header/header.component.scss
@@ -1,3 +1,11 @@
 .button {
     margin-left: 10px;
+    font-size: 15px;
+    cursor: pointer;
+}
+.div {
+    width: 200px;
+}
+.active {
+    background-color: blueviolet;
 }
