--- a/src/app/forms/containers/basic-form/basic-form.component.html
+++ b/src/app/forms/containers/basic-form/basic-form.component.html
@@ -1,1 +1,10 @@
-<p>basic-form works!</p>
+<form >
+    <mat-form-field>
+        <mat-label>first Name</mat-label>
+        <input matInput type="text">
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Last Name</mat-label>
+        <input matInput type="text">
+    </mat-form-field>
+</form>
