--- a/src/app/forms/containers/basic-form/basic-form.component.html
+++ b/src/app/forms/containers/basic-form/basic-form.component.html
@@ -1,10 +1,35 @@
-<form >
-    <mat-form-field>
-        <mat-label>first Name</mat-label>
-        <input matInput type="text">
-    </mat-form-field>
-    <mat-form-field>
-        <mat-label>Last Name</mat-label>
-        <input matInput type="text">
-    </mat-form-field>
+<form [formGroup]="forms" (ngSubmit)="submit()">
+    <div formGroupName="user">
+        <mat-form-field>
+            <mat-label>first Name</mat-label>
+            <input matInput type="text" formControlName="firstName">
+            <mat-error *ngIf="!firstName.valid && firstName.touched">
+                <span *ngIf="firstName.errors.required">This field is required</span>
+            </mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>Last Name</mat-label>
+            <input matInput type="text" formControlName="lastName">
+            <mat-error *ngIf="!lastName.valid && lastName.touched">
+                <span *ngIf="lastName.errors.required">This field is required</span>
+                <span *ngIf="lastName.errors.email">Format email not match</span>
+            </mat-error>
+        </mat-form-field>
+    </div>
+
+        <mat-form-field>
+            <mat-label>Age</mat-label>
+            <input matInput type="number" formControlName="age">
+        </mat-form-field>
+
+        <div formArrayName="hobbies">
+            <p>Your hobby</p>
+            <button mat-raised-button (click)="addHobby()">add</button>
+            <mat-form-field *ngFor="let control of hobbies.controls; let i = index">
+                <input matInput type="text" [formControlName]="i">
+            </mat-form-field>
+        </div>
+    
+    <button mat-button type="submit" [disabled]="!forms.valid">Submit</button>
 </form>
