--- a/src/app/forms/containers/basic-form/basic-form.component.html
+++ b/src/app/forms/containers/basic-form/basic-form.component.html
@@ -5,6 +5,7 @@
             <input matInput type="text" formControlName="firstName">
             <mat-error *ngIf="!firstName.valid && firstName.touched">
                 <span *ngIf="firstName.errors.required">This field is required</span>
+                <span *ngIf="firstName.errors.forbiden">This name is forbiden</span>
             </mat-error>
         </mat-form-field>
 
@@ -21,6 +22,10 @@
         <mat-form-field>
             <mat-label>Age</mat-label>
             <input matInput type="number" formControlName="age">
+            <mat-error *ngIf="!age.valid && age.touched">
+                <span *ngIf="age.errors.required">This field is required</span>
+                <span *ngIf="age.errors.decimal && !age.errors.required">this field is decimal</span>
+            </mat-error>
         </mat-form-field>
 
         <div formArrayName="hobbies">
