--- a/src/app/items/components/objects/objects.component.html
+++ b/src/app/items/components/objects/objects.component.html
@@ -1,3 +1,4 @@
+<p appHighlight>Items List</p>
 <p>objects works!</p>
 <p>{{user.id}}  {{user.name}}</p>
 <a [routerLink]="['/items/objects', 11, 'omar']"
