--- a/src/app/items/containers/items-list/items-list.component.html
+++ b/src/app/items/containers/items-list/items-list.component.html
@@ -1,4 +1,4 @@
-<p>items-list works!</p>
+<p appHighlight [backgroungColor]="'blue'" [Color]="'red'">items-list works!</p>
 <p>Just do it</p>
 
     <mat-nav-list>
