--- a/src/app/items/containers/items-list/items-list.component.html
+++ b/src/app/items/containers/items-list/items-list.component.html
@@ -11,3 +11,4 @@
         </a>
     </mat-nav-list>
 <button (click)="navigate()">navigate</button>
+<button mat-button (click)="date()">date</button>
