--- a/src/app/items/containers/items-list/items-list.component.html
+++ b/src/app/items/containers/items-list/items-list.component.html
@@ -1,10 +1,21 @@
 
-  
+  <div class="row">
+    <div class="col-md-2 offset-md-8">
+      <button mat-raised-button class="add-button" color="primary" routerLink="create">
+        <mat-icon>add_box</mat-icon> Ajouter
+      </button>
+    </div>
+  </div>
+
       <div class="example-container mat-elevation-z8">
         <table [dataSource]="items" mat-table matSort>
   
           
-  
+          <ng-container matColumnDef="id" sticky>
+            <th *matHeaderCellDef mat-header-cell mat-sort-header> ID</th>
+            <td *matCellDef="let element" mat-cell> {{element.id}} </td>
+          </ng-container>
+
           <ng-container matColumnDef="name" sticky>
             <th *matHeaderCellDef mat-header-cell mat-sort-header> Name</th>
             <td *matCellDef="let element" mat-cell> {{element.name}} </td>
@@ -16,11 +27,27 @@
             <td *matCellDef="let element" mat-cell> {{element.description}} </td>
           </ng-container>
   
+
+
+          <ng-container matColumnDef="actions">
+            <mat-header-cell *matHeaderCellDef> Actions</mat-header-cell>
+            <mat-cell *matCellDef="let element">
+
+              <button mat-icon-button color='accent' (click)="deleteItem(element.id)"
+              matTooltip="supprimer" matTooltipPosition="above"> 
+                <mat-icon>delete_outline</mat-icon>
+              </button>
+              <button mat-icon-button color='accent' (click)="updateItem(element.id)" matTooltip="edit"
+                matTooltipPosition="above"> 
+                <mat-icon>edit</mat-icon>
+              </button>
+            </mat-cell>
+          </ng-container>
   
     
   
           <tr *matHeaderRowDef="displayedColumns; sticky: true" mat-header-row></tr>
-          <tr  *matRowDef="let row; columns: displayedColumns;" mat-row></tr>
+          <tr  *matRowDef="let row; columns: displayedColumns;" mat-row (click)="create(row)"></tr>
         </table>
         <mat-paginator [pageSizeOptions]="[25,50,100]" [pageSize]="25" showFirstLastButtons></mat-paginator>
       </div>
