--- a/src/app/ui/components/side-bar/side-bar.component.html
+++ b/src/app/ui/components/side-bar/side-bar.component.html
@@ -2,7 +2,16 @@
     <a mat-list-item  routerLink="/items">
         <mat-icon >add</mat-icon> <span >items</span> 
     </a>
-    <a mat-list-item  routerLink="/items">
+    <a mat-list-item  routerLink="/forms">
         <mat-icon >more_vert</mat-icon> <span >forms</span> 
+    </a>
+    <a mat-list-item  routerLink="/users">
+        <mat-icon >contant</mat-icon> <span >Users</span> 
+    </a>
+    <a mat-list-item  routerLink="/produits">
+        <mat-icon >more_vert</mat-icon> <span >Produits</span> 
+    </a>
+    <a mat-list-item  routerLink="/upload">
+        <mat-icon >clear</mat-icon> <span >Upload</span> 
     </a>
  </mat-nav-list>
