--- a/src/app/users/containers/create-user/create-user.component.html
+++ b/src/app/users/containers/create-user/create-user.component.html
@@ -48,6 +48,16 @@
                     <div class="row">
                         <div class="col">
                             <mat-form-field appearance="outline" class="field" floatLabel="never">
+                                <mat-label>Role</mat-label>
+                                <input formControlName="role" matInput>
+                                <mat-icon matSuffix>notifications</mat-icon>
+                                </mat-form-field>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col">
+                            <mat-form-field appearance="outline" class="field" floatLabel="never">
                                 <mat-label>confirmation password</mat-label>
                                 <input formControlName="confirmationPassword" matInput>
                                 <mat-icon matSuffix>password</mat-icon>
