--- a/src/app/users/containers/list-users/list-users.component.html
+++ b/src/app/users/containers/list-users/list-users.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-2 offset-md-8">
       <button mat-raised-button class="add-button" color="primary" routerLink="create">
-        <mat-icon>add_box</mat-icon> Ajouter
+        <mat-icon>add_box</mat-icon> Ajouter {{count}}
       </button>
     </div>
   </div>
