--- a/src/app/users/containers/login/login.component.html
+++ b/src/app/users/containers/login/login.component.html
@@ -2,3 +2,4 @@
 <button class="btn btn-primary" (click)="create()">create an observable</button>
 <br>
 <button class="btn btn-primary" (click)="subscribe()">subscribe to an observable</button>
+<p>{{count}}</p>
