--- a/src/app/ui/components/side-bar/side-bar.component.html
+++ b/src/app/ui/components/side-bar/side-bar.component.html
@@ -1,17 +1,10 @@
 <mat-nav-list>
-    <a mat-list-item  routerLink="/items">
-        <mat-icon >add</mat-icon> <span >items</span> 
+
+    <a mat-list-item  routerLink="/roles">
+        <mat-icon >contant</mat-icon> <span >Roles</span> 
     </a>
-    <a mat-list-item  routerLink="/forms">
-        <mat-icon >more_vert</mat-icon> <span >forms</span> 
-    </a>
+
     <a mat-list-item  routerLink="/users">
         <mat-icon >contant</mat-icon> <span >Users</span> 
-    </a>
-    <a mat-list-item  routerLink="/produits">
-        <mat-icon >more_vert</mat-icon> <span >Produits</span> 
-    </a>
-    <a mat-list-item  routerLink="/upload">
-        <mat-icon >clear</mat-icon> <span >Upload</span> 
     </a>
  </mat-nav-list>
