--- a/src/app/roles/containers/list-roles/list-roles.component.html
+++ b/src/app/roles/containers/list-roles/list-roles.component.html
@@ -8,7 +8,7 @@
   </div>
 
       <div class="example-container mat-elevation-z8">
-        <table [dataSource]="userList" mat-table matSort>
+        <table [dataSource]="roleList" mat-table matSort>
   
           
           <ng-container matColumnDef="id" sticky>
