--- a/src/app/users/containers/list-users/list-users.component.html
+++ b/src/app/users/containers/list-users/list-users.component.html
@@ -34,7 +34,7 @@
 
           <ng-container matColumnDef="role">
             <th *matHeaderCellDef mat-header-cell mat-sort-header> Role</th>
-            <td *matCellDef="let element" mat-cell> {{element.role}} </td>
+            <td *matCellDef="let element" mat-cell> {{element.role.name}} </td>
           </ng-container>
   
 
