--- a/src/app/ui/components/side-bar/side-bar.component.html
+++ b/src/app/ui/components/side-bar/side-bar.component.html
@@ -7,4 +7,8 @@
     <a mat-list-item  routerLink="/users">
         <mat-icon >contant</mat-icon> <span >Users</span> 
     </a>
+
+    <a mat-list-item  routerLink="/files">
+        <mat-icon >contant</mat-icon> <span >files</span> 
+    </a>
  </mat-nav-list>
